--- a/src/2-form.html
+++ b/src/2-form.html
@@ -22,6 +22,7 @@
         <button type="submit">Submit</button>
       </form>
     </div>
+    <script src="./js/header.js"></script>
     <script type="module" src="./js/2-form.js"></script>
   </body>
 </html>
