--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,6 @@
       </ul>
     </div> -->
     <!-- <script type="module" src="./js/home.js"></script> -->
-    <script src="./js/header.js"></script>
+    <script type="module" src="./js/header.js"></script>
   </body>
 </html>
