--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -33,7 +33,7 @@
         </div>
       </div>
     </div>
-    <script src="./js/header.js"></script>
+    <script type="module" src="./js/header.js"></script>
     <script type="module" src="./js/1-timer.js"></script>
   </body>
 </html>
