--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="iziToast.min.css" />
     <link rel="stylesheet" href="./css/timer.css" />
 
-    <title>Document</title>
+    <title>TIMMER</title>
   </head>
   <body class="bg-body">
     <div class="container">
