--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -28,12 +28,11 @@
 
         <fieldset class="fieldset">
           <legend>State</legend>
-          <label>
+          <label class="label-radio">
             <input type="radio" name="state" value="fulfilled" required />
-
             Fulfilled
           </label>
-          <label>
+          <label class="label-radio">
             <input type="radio" name="state" value="rejected" required />
             Rejected
           </label>
