--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -14,7 +14,7 @@
         <label>
           Delay (ms)
           <div class="counter">
-            <button class="counter-button" type="button">-</button>
+            <button class="counter-button minus" type="button">-</button>
             <input
               class="timer-input"
               type="number"
@@ -22,7 +22,7 @@
               min="0"
               required
             />
-            <button class="counter-button" type="button">+</button>
+            <button class="counter-button plus" type="button">+</button>
           </div>
         </label>
 
