--- a/src/index.html
+++ b/src/index.html
@@ -10,27 +10,30 @@
   </head>
   <body class="bg-body">
     <div class="container"><load ="partials/header.html" /></div>
-
-    <!-- <div id="app">
+    <div id="app">
       <h1 class="home-title">Welcom to Homework 10</h1>
       <ul class="home-ul">
         <li>
           <a class="home-link" href="./1-timer.html"
             ><img
               class="home-img"
-              src="/img/gallery.png"
+              src="/img/Fallout-4-Countdown.jpg"
               alt="Gallery"
               width="400"
           /></a>
         </li>
         <li>
-          <a class="home-link" href="./2-form.html"
-            ><img class="home-img" src="/img/form.png" alt="Form" width="400"
+          <a class="home-link" href="./2-snackbar.html"
+            ><img
+              class="home-img"
+              src="/img/Quest_icon.webp"
+              alt="Form"
+              width="400"
+              height="290"
           /></a>
         </li>
       </ul>
-    </div> -->
-    <!-- <script type="module" src="./js/home.js"></script> -->
+    </div>
     <script type="module" src="./js/header.js"></script>
   </body>
 </html>
